@@ -141,6 +141,7 @@ endif
 
 check_PROGRAMS = \
   test_shutdown_select \
+  test_shutdown_poll \
   test_daemon
 
 if HAVE_POSTPROCESSOR
@@ -154,7 +155,8 @@ TESTS = $(check_PROGRAMS)
 
 if !HAVE_LISTEN_SHUTDOWN
 XFAIL_TESTS = \
-  test_shutdown_select
+  test_shutdown_select \
+  test_shutdown_poll
 endif
 
 test_daemon_SOURCES = \
@@ -192,4 +194,13 @@ test_shutdown_select_CFLAGS = \
   $(AM_CFLAGS) $(PTHREAD_CFLAGS)
 test_shutdown_select_LDADD = \
   $(PTHREAD_LIBS)
+endif
+
+test_shutdown_poll_SOURCES = \
+  test_shutdown_select.c
+if USE_POSIX_THREADS
+test_shutdown_poll_CFLAGS = \
+  test_shutdown_select_CFLAGS
+test_shutdown_poll_LDADD = \
+  test_shutdown_select_LDADD
 endif
